# alarm-investigator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/plans/: 2026-01-29-aws-alarm-agent-design.md  2026-01-29-phase1-mvp-implementation.md
examples/: test-event.json
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: build.sh
src/alarm_investigator/: __init__.py  agent.py  handler.py  models.py  output.py
src/alarm_investigator/tools/: __init__.py  base.py  cloudwatch.py  ec2.py  ecs.py  lambda_.py  rds.py
tests/: __init__.py  conftest.py  test_agent.py  test_handler.py  test_models.py  test_output.py  test_tools_base.py  test_tools_cloudwatch.py  test_tools_ec2.py  test_tools_ecs.py  test_tools_lambda.py  test_tools_rds.py
